--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 </head>
 <body>
     <div class="grid">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
+        <div class="title">Title</div>
+        <div class="header">Header</div>
+        <div class="sidebar">Sidebar</div>
+        <div class="content">Content
+            <p>A</p>
+            <p>H</p>
+        </div>
+        <div class="footer">Footer</div>
     </div>
     <script src="main.js"></script>
 </body>
